--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,8 +13,8 @@
         </th:block>
 
         <div>
-            <label for="name">名前</label>
-            <input type="text" class="form-class" id="name" name="name">
+            <label for="name">ユーザID</label>
+            <input type="text" class="form-class" id="userId" name="userId">
         <div>
         <div>
             <label for="email">メールアドレス</label>
