--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -21,5 +21,8 @@
 
         <input type="submit" value="送信"></input>
     </form>
+
+    <button class="like-button" data-id="1">いいね</button>
 </body>
+<script src="/js/sample.js"></script>
 </html>
