--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,14 +14,18 @@
             <tr>
                 <th>ゲーム内感度</th>
                 <th>dpi</th>
+                <th>勝率</th>
+                <th>HS率</th>
             </tr>
         </thead>
         <tbody>
-            <tr th:each="users : ${dpi}">
-                <form method="get" th:action="@{/editEdpi/{id}(id=${users.dpiId})}">
-                    <td th:text="${users.sensitivity}"></td>
-                    <td th:text="${users.dpi}"></td>
-                    <input type="hidden" name="dpiId" th:value="${users.dpiId}">
+            <tr th:each="dpis : ${dpiList}">
+                <form method="get" th:action="@{/editEdpi/{id}(id=${dpis.dpiId})}">
+                    <td th:text="${dpis.sensitivity}"></td>
+                    <td th:text="${dpis.dpi}"></td>
+                    <td th:text="${dpis.winRate} + '%'" ></td>
+                    <td th:text="${dpis.hsRate} + '%'" ></td>
+                    <input type="hidden" name="dpiId" th:value="${dpis.dpiId}">
                     <td><button type="submit">戦績登録</button></td>
                 </form>
             </tr>
