--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,5 +22,10 @@
         </div>
         <button type="submit">送信</button>
     </form>
+
+
+    <form method="get" th:action="@{/signup}">
+        <button type="submit">新規登録</button>
+    </form>
 </body>
 </html>
