--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
             <label for="email">メールアドレス</label>
             <input type="email" class="form-class" id="email" name="email">
         </div>
-        <button type="submit">送信</button>
+        <button type="submit">ログイン</button>
     </form>
 
 
