バリデーションの追加

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,10 @@
             </tr>
         </tbody>
     </table>
+    
+    <form method="get" th:action="@{/registEdpi}">
+        <button>EDPI登録</button>
+    </form>
 
     <form method="get" th:action="@{/editUser}">
         <button>プロフィール編集</button>
