--- a/src/main/resources/templates/registEdpi.html
+++ b/src/main/resources/templates/registEdpi.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+</head>
 </head>
 <body>
     <h4>EDPI登録</h4>
 
-
-    <form method="post" th:action="@{/registEdpi}">
+    <form method="post" th:action="@{/registEdpi}" th:object="${UsersDpi}">
         <label for="userName">dpi
-            <input type="number" id="dpi" name="dpi" min="0" step="100">
+            <input type="number" id="dpi" name="dpi" min="0" step="100" th:field="*{dpi}">
         </label>
+        <p th:if="${#fields.hasErrors('dpi')}" th:errors="*{dpi}" style="color: red;"></p>
 
         <label for="email">sensitivity
-            <input type="number" step="0.01" max="10" , min="0" id="sensitivity" name="sensitivity">
+            <input type="number" step="0.01" max="10" , min="0" id="sensitivity" name="sensitivity" th:field="*{sensitivity}">
         </label>
+        <p th:if="${#fields.hasErrors('sensitivity')}" th:errors="*{sensitivity}" style="color: red;"></p>
 
         <button type="submit">EDPI登録</button>
     </form></body>
