--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,30 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/login.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 </head>
 <body>
-    <form method="post" th:action="@{/login}" th:object="${MUser}">
-        <th:block th:if="${error}">
-            <div style="color: red;" th:text="${error}"></div>
-        </th:block>
-    
-        <div>
-            <label for="userId">ユーザーID</label>
-            <input type="text" id="userId" name="userId" th:field="*{userId}">
-            <p th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}"></p>
-        </div>
-        <div>
-            <label for="email">メールアドレス</label>
-            <input type="email" id="email" name="email" th:field="*{email}">
-            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color: red;" ></p>
-        </div>
-        <button type="submit">ログイン</button>
-    </form>
 
-    <form method="get" th:action="@{/signup}">
-        <button type="submit">新規登録</button>
-    </form>
+    <h2 class="login-header">ログイン画面</h2>
+    
+    <div class="login">
+        <div class="form">
+            <form method="post" th:action="@{/login}" th:object="${MUser}">
+                <th:block th:if="${error}">
+                    <div style="color: red;" th:text="${error}"></div>
+                </th:block>
+            
+                <div class="form-group">
+                    <label for="userId"><h4>ユーザーID</h4></label>
+                    <input type="text" id="userId" name="userId" th:field="*{userId}" class="form-control">
+                    <p th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}" class="text-danger"></p>
+                </div>
+
+                <div class="form-group">
+                    <label for="email"><h4>メールアドレス</h4></label>
+                    <input type="email" id="email" name="email" th:field="*{email}" class="form-control">
+                    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger" ></p>
+                </div>
+                <button type="submit" class="btn btn-primary">ログイン</button>
+            </form>
+
+            <div class="signup">
+                <p><a th:href="@{/registEdpi}">新規登録</a>はこちら</p>
+
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
