共通ヘッダー作成

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,3 +1,16 @@
-<form method="get" th:action="@{/logout}">
-    <button type="submit">ログアウト</button>
-</form>
+
+<header class="header">
+    <nav class="navbar">
+        <div class="header-logo">
+            <form method="get" th:action="@{/logout}">
+                <button type="submit">ログアウト</button>
+            </form>
+        </div>
+
+        <div class="header-logo">
+            <form method="get" th:action="@{/editUser}">
+                <button type="submit">プロフィール編集</button>
+            </form>
+        </div>
+    </nav>
+</header>
