--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 </head>
 <body>
 
     <div th:replace="header"></div>
+
+    <h2 class="index-header">EDPI画面</h2>
 
     <table>
         <thead>
@@ -18,6 +22,7 @@
                 <th>dpi</th>
                 <th>勝率</th>
                 <th>HS率</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
@@ -37,9 +42,6 @@
     <form method="get" th:action="@{/registEdpi}">
         <button>EDPI登録</button>
     </form>
-
-    <form method="get" th:action="@{/editUser}">
-        <button>プロフィール編集</button>
-    </form>
+    
 </body>
 </html>
