--- a/src/main/resources/templates/registEdpi.html
+++ b/src/main/resources/templates/registEdpi.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/header.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 </head>
 <body>
+
+    <div th:replace="header"></div>
+
     <h4>EDPI登録</h4>
 
     <form method="post" th:action="@{/registEdpi}" th:object="${UsersDpi}">
