--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/signup.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 </head>
 <body>
 
-    <div>
+    <h2 class="signup-header">新規登録画面</h2>
 
-        <form method="post" th:action="@{/signup}" th:object="${MUser}">
-            <label for="userName">名前
-                <input type="text" id="userName" name="userName">
-                <p th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></p>
-            </label>
+    <div class="login">
+        <div class="form">
 
-            <label for="email">メールアドレス
-                <input type="email" id="email" name="email">
-                <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-            </label>
+            <form method="post" th:action="@{/signup}" th:object="${MUser}">
+                <label for="userName"><h4>ユーザ名</h4>
+                    <input type="text" id="userName" name="userName">
+                    <p th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" class="text-danger"></p>
+                </label>
 
-            <button type="submit">新規ユーザ登録</button>
-        </form>
+                <label for="email"><h4>メールアドレス</h4>
+                    <input type="email" id="email" name="email">
+                    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></p>
+                </label>
 
+                <button type="submit">新規ユーザ登録</button>
+            </form>
+
+        </div>
     </div>
     
 </body>
