--- a/src/main/resources/templates/editEdpi.html
+++ b/src/main/resources/templates/editEdpi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/editEdpi.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -17,6 +18,7 @@
             <tr>
                 <th>勝敗</th>
                 <th>HS率</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
@@ -34,24 +36,28 @@
 
 
 
-    <h3>戦績登録</h3>
+    <h2 class="editEdpi-header">戦績登録</h2>
 
-    <form method="post" th:action="@{/editEdpi/{dpiId}(dpiId=${dpiId})}" th:object="${MMatch}">
-        <label>勝敗
-            <select name="winLose" id="winLose">
-                <option value="1">win</option>
-                <option value="2">lose</option>
-            </select>
-        </label>
+    <div class="login">
+        <div class="form">
+            <form method="post" th:action="@{/editEdpi/{dpiId}(dpiId=${dpiId})}" th:object="${MMatch}">
+                <label><h4>勝敗</h4>
+                    <select name="winLose" id="winLose">
+                        <option value="1">win</option>
+                        <option value="2">lose</option>
+                    </select>
+                </label>
 
-        <div>
-            <label>HS率
-                <input type="number" min="0" max="100" id="hsRate" name="hsRate" th:field="*{hsRate}">
-            </label>
-            <p th:if="${#fields.hasErrors('hsRate')}" th:errors="*{hsRate}" style="color: red;" ></p>
+                <div>
+                    <label><h4>HS率(%)</h4>
+                        <input type="number" min="0" max="100" id="hsRate" name="hsRate" th:field="*{hsRate}">
+                    </label>
+                    <p th:if="${#fields.hasErrors('hsRate')}" th:errors="*{hsRate}" style="color: red;" ></p>
+                </div>
+                <input type="hidden" name="dpiId" th:value="${dpiId}">
+                <button type="submit">登録</button>
+            </form>
         </div>
-        <input type="hidden" name="dpiId" th:value="${dpiId}">
-        <button type="submit">登録</button>
-    </form>
+    </div>
 </body>
 </html>
