--- a/src/main/resources/templates/registEdpi.html
+++ b/src/main/resources/templates/registEdpi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/registEdpi.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
@@ -12,19 +13,26 @@
 
     <div th:replace="header"></div>
 
-    <h4>EDPI登録</h4>
+    <h2 class="registEdpi-header">EDPI登録</h2>
 
-    <form method="post" th:action="@{/registEdpi}" th:object="${UsersDpi}">
-        <label for="userName">dpi
-            <input type="number" id="dpi" name="dpi" min="0" step="100" th:field="*{dpi}">
-        </label>
-        <p th:if="${#fields.hasErrors('dpi')}" th:errors="*{dpi}" style="color: red;"></p>
+    <div class="login">
+        <div class="form">
 
-        <label for="email">sensitivity
-            <input type="number" step="0.01" max="10" , min="0" id="sensitivity" name="sensitivity" th:field="*{sensitivity}">
-        </label>
-        <p th:if="${#fields.hasErrors('sensitivity')}" th:errors="*{sensitivity}" style="color: red;"></p>
+            <form method="post" th:action="@{/registEdpi}" th:object="${UsersDpi}">
+                <label for="userName"><h4>dpi</h4>
+                    <input type="number" id="dpi" name="dpi" min="0" step="100" th:field="*{dpi}">
+                </label>
+                <p th:if="${#fields.hasErrors('dpi')}" th:errors="*{dpi}" style="color: red;"></p>
 
-        <button type="submit">EDPI登録</button>
-    </form></body>
+                <label for="email"><h4>sensitivity</h4>
+                    <input type="number" step="0.001" max="10" , min="0" id="sensitivity" name="sensitivity" th:field="*{sensitivity}">
+                </label>
+                <p th:if="${#fields.hasErrors('sensitivity')}" th:errors="*{sensitivity}" style="color: red;"></p>
+
+                <button type="submit">EDPI登録</button>
+            </form>
+
+        </div>
+    </div>
+</body>
 </html>
