ログイン時の処理を改善

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,9 +21,9 @@
                 </th:block>
             
                 <div class="form-group">
-                    <label for="userId"><h4>ユーザーID</h4></label>
-                    <input type="text" id="userId" name="userId" th:field="*{userId}" class="form-control">
-                    <p th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}" class="text-danger"></p>
+                    <label for="userName"><h4>ユーザ名</h4></label>
+                    <input type="text" id="userName" name="userName" th:field="*{userName}" class="form-control">
+                    <p th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" class="text-danger"></p>
                 </div>
 
                 <div class="form-group">
