--- a/src/main/resources/static/css/editProfile.css
+++ b/src/main/resources/static/css/editProfile.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-.login-header {
+.editProfile-header {
   text-align: center;
   margin-top: 10%;
   margin-bottom: 0;
