--- a/src/main/resources/templates/editEdpi.html
+++ b/src/main/resources/templates/editEdpi.html
@@ -13,6 +13,8 @@
 
     <div th:replace="header"></div>
 
+    <h2 class="editEdpi-header">戦績一覧</h2>
+
     <table>
         <thead>
             <tr>
