--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -13,6 +13,8 @@
 
     <div th:replace="header"></div>
 
+    <h2 class="editProfile-header">プロフィール編集画面</h2>
+
     <div class="login">
         <div class="form">
 
