--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,12 +10,10 @@
 </head>
 <body>
 
-    <h2 class="signup-header">新規登録画面</h2>
+    <h2 class="signup-header">新規ユーザ登録画面</h2>
 
     <div class="login">
         <div class="form">
-
-            
 
             <form method="post" th:action="@{/signup}" th:object="${MUser}">
 
