--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,6 @@
 
 <header class="header">
+    
     <nav class="navbar">
         <div class="header-logo">
             <form method="get" th:action="@{/logout}">
@@ -12,5 +13,12 @@
                 <button type="submit">プロフィール編集</button>
             </form>
         </div>
+
+        <div class="header-logo">
+            <form method="get" th:action="@{/login}">
+                <button type="submit">ホーム画面</button>
+            </form>
+        </div>
+
     </nav>
 </header>
